developer/src/kmc-package/test/fixtures/invalid/version_four.kmn
store(&name) 'version 4'
store(&keyboardversion) '4.0'

begin unicode > use(main)

group(main) using keys